force-app/main/default/objects/Batch_Operation__c/Batch_Operation__c.object-meta.xml
<CustomObject>
    <description>This object is used as the trigger for doing batch type operations</description>
    <label>Batch Operation</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>BatchOperations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Operations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>