force-app/main/default/objects/Batch_Operation__c/fields/Operation__c.field-meta.xml
<CustomField>
    <fullName>Operation__c</fullName>
    <label>Operation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delete Security</fullName>
            </value>
            <value>
                <fullName>Delete Legal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>