force-app/main/default/objects/Batch_Operation__c/fields/RecordsRemoved__c.field-meta.xml
<CustomField>
    <fullName>RecordsRemoved__c</fullName>
    <label>RecordsRemoved</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>